# audio_engineering_simulator

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  biome.json  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/guided-reading/: SKILL.md
.claude/skills/guided-reading/references/: template.md
.claude/skills/story-planning/: SKILL.md
.github/workflows/: ci.yml
crates/capture/: Cargo.toml
crates/capture/src/: lib.rs
crates/devices/: Cargo.toml
crates/devices/src/: build.rs  cables.rs  catalog.rs  lib.rs  scene.rs
crates/devices/src/catalog/: computer.rs
crates/engine/: Cargo.toml
crates/engine/src/: byte_ring.rs  daw.rs  device.rs  dsp.rs  electrical.rs  fir.rs  graph.rs  level.rs  lib.rs  node.rs  noise.rs  param.rs  port.rs  readout.rs  rng.rs  schedule.rs  signal.rs  test_util.rs  transport.rs  wav.rs
crates/engine/src/device/: gain.rs  source.rs  sum.rs
crates/engine/src/dsp/: biquad.rs  envelope.rs
crates/engine/src/electrical/: cable.rs  divider.rs  farads.rs  input_z.rs  ohms.rs  output_z.rs  phantom.rs  thevenin.rs
crates/engine/src/node/: ad.rs  balanced.rs  compressor.rs  condenser.rs  da.rs  dc_blocker.rs  digital_meter.rs  digital_mux.rs  eq.rs  event_thru.rs  gain.rs  lifted.rs  matrix.rs  mic_preamp.rs  multitrack.rs  source.rs  speaker.rs  sum.rs  synth.rs  vu_meter.rs
crates/engine/src/schedule/: events.rs  hum.rs  swap.rs  tests.rs  topo.rs
crates/engine/src/signal/: bit_depth.rs  buffer.rs  event.rs  lane.rs  rate.rs  sample.rs  sample_rate.rs  volts.rs
crates/engine/tests/: no_alloc.rs
crates/harness/: Cargo.toml
crates/harness/src/: capture.rs  lib.rs  main.rs  render.rs  sine.rs  wav.rs
crates/harness/tests/: render.rs
crates/wasm-bindings/: Cargo.toml  README.md
crates/wasm-bindings/bench/: build.sh  index.html
crates/wasm-bindings/rt/: .gitignore  build.sh  index.html  main.js  processor-impl.js  worklet-polyfill.js
crates/wasm-bindings/src/: lib.rs  scene.rs
docs/: EPIC_1_NOTES.md  EPIC_2_NOTES.md  EPIC_3_NOTES.md  EPIC_4_NOTES.md  EPIC_5_NOTES.md  EPIC_6_NOTES.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  PROJECT_PLAN.md  osku_physics_concepts.md  osku_rust_concepts.md
docs/one_off_plans/: app_svelte_split_plan.md  harness_demo_plan.md  roundtrip_latency_plan.md  story_5_7_part2_plan.md
web/: .gitignore  biome.json  build-wasm.sh  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.svelte  BenchStage.svelte  DebugPanel.svelte  Root.svelte  Workbench.svelte  bench-watch.ts  cable-view.ts  camera.svelte.ts  catalog.ts  connections.ts  daw.ts  device-drag.ts  device-handle.ts  device-ui.ts  engine.ts  focus.ts  jack-anchors.ts  keyboard-input.svelte.ts  main.ts  notes.ts  opfs-backend.ts  params.ts  patch-controller.svelte.ts  patching.ts  placement.ts  projection.ts  router.svelte.ts  scene-ops.ts  scene-store.ts  scene.ts  session.svelte.ts  skin.ts  spatial.ts  storage-client.ts  storage-protocol.ts  storage-worker.ts  take-store.ts  tokens.ts  url-scene.ts  waveform.ts  (+2 more)
web/src/styles/: base.css  components.css  tokens.css
web/src/widgets/: Cable.svelte  CableInspector.svelte  Chassis.svelte  Computer.svelte  ComputerMixer.svelte  ConfigButton.svelte  ConfigSwitch.svelte  Console.svelte  Control.svelte  DeviceChrome.svelte  DuplexSocket.svelte  Fader.svelte  FloatingWindow.svelte  FocusriteControl.svelte  Jack.svelte  Keybed.svelte  Knob.svelte  Led.svelte  Legend.svelte  Meter.svelte  MidiController.svelte  MidiControllerFocus.svelte  Panel.svelte  Reading.svelte  RoutingGrid.svelte  Scarlett8i6.svelte  Screen.svelte  Socket.svelte  Speaker.svelte  Switch.svelte  SynthVoice.svelte  Vu.svelte  VuFace.svelte  Waveform.svelte  WorldView.svelte  drag.ts  format.ts  taper.ts
web/src/widgets/layout/: Col.svelte  Place.svelte  Row.svelte  flex.ts
web/test/: bench-watch.test.ts  cable-view.test.ts  connections.test.ts  daw.test.ts  faceplate.test.ts  focus.test.ts  layout.test.ts  notes.test.ts  params.test.ts  patching.test.ts  placement.test.ts  projection.test.ts  scene-ops.test.ts  scene-store.test.ts  spatial.test.ts  storage-client.test.ts  take-store.test.ts  taper.test.ts  url-scene.test.ts  waveform.test.ts  workbench-scene.test.ts
web/worklet/: processor-impl.js  worklet-polyfill.js
