[package]
name = "capture"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

# The implicit capture: harness-side analog→digital plumbing that resamples the tapped speaker
# voltage to host samples. Lives in its own crate (depending only on `engine`, no native deps) so
# it is reachable from BOTH the native render harness and the wasm32 browser bindings. It is
# deliberately NOT part of `engine` — it sits *outside* the simulation (see the lib docs).
[dependencies]
engine.workspace = true

[dev-dependencies]
approx.workspace = true

[lints]
workspace = true
