[package]
name = "capture"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

# The implicit capture: harness-side analog→digital plumbing that resamples the tapped speaker
# voltage to host samples. Own crate, engine-only deps so both the native harness and the wasm
# bindings can reach it; see the lib docs for why it sits outside the simulation.
[dependencies]
engine.workspace = true

[dev-dependencies]
approx.workspace = true

[lints]
workspace = true
