[package]
name = "devices"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
# The device catalog + scene assembly sit ON the engine: builders construct engine nodes, and the
# scene builder turns a serialized patch into a `Graph` to `compile`. Core simulation *content*, not
# JS glue — consumed by both `wasm-bindings` (browser) and `harness` (native render scenarios).
engine.workspace = true
# serde lives HERE (the scene IR + UI descriptors serialize), never in the engine — so the engine
# stays serde-free and portable while this crate owns the (de)serializable surface. `serde-wasm-bindgen`
# (the JS-value bridge) stays in `wasm-bindings`; this crate is format-agnostic.
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# Native tests round-trip the IR / descriptors through JSON (no JS realm needed).
serde_json = "1"

[lints]
workspace = true
