[package]
name = "harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
engine.workspace = true
# Terminal Braille line plots — harness-only (this is a native binary, so the dep never
# reaches the engine or its wasm32 build). Used to *see* the voltage waveforms.
textplots = "0.8"

[dev-dependencies]
approx.workspace = true

[lints]
workspace = true
