[package]
name = "harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
engine.workspace = true
# The implicit capture (analog→host-sample resample), now a shared crate so the wasm bindings can
# reuse it too (Task 3.1.1). Pure engine-only deps — no native baggage reaches it.
capture.workspace = true
# Terminal Braille line plots — harness-only (this is a native binary, so the dep never
# reaches the engine or its wasm32 build). Used to *see* the voltage waveforms.
textplots = "0.8"
# WAV read/write for offline renders and golden-file comparison — harness-only, native.
hound = "3.5"

[dev-dependencies]
approx.workspace = true

[lints]
workspace = true
