[package]
name = "wasm-bindings"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
# cdylib for the WASM artifact wasm-pack/wasm-bindgen consume; rlib so the surface stays
# unit-testable natively (the render_blocks loop is exercised by a native test in Task 3.1.3).
crate-type = ["cdylib", "rlib"]

[dependencies]
engine.workspace = true
# The implicit capture (analog→host-sample resample) — engine-only deps, so it compiles to wasm32
# and the in-WASM render loop can reuse it (Task 3.1.1 / 3.1.3).
capture.workspace = true
# JS<->Rust glue. wasm-pack auto-installs a `wasm-bindgen-cli` matching THIS crate version from
# Cargo.lock — they must agree exactly, so let the lockfile pin it (don't hand-install a mismatched
# CLI). Kept on the cold/setup surface only; the per-quantum zero-copy hot path is an Epic-3.2
# concern (3.1 measures pure compute, so no raw-memory/`unsafe` path here yet).
wasm-bindgen = "0.2.125"
# Scene IR (Story 4.1): the UI's runnable "patch" deserializes into Rust structs here to build the
# graph. serde lives ONLY in this JS-facing crate — the engine stays serde-free and portable.
# `serde-wasm-bindgen` is the runtime ingress: a structured JS object → Rust struct, no JSON-string
# round-trip. (The durable save file is TS-owned versioned JSON; Rust only ever sees the runnable
# projection, deserialized — it never writes the file.)
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
# Native unit tests round-trip the patch IR through JSON (serde-wasm-bindgen needs a JS realm, so it
# can't run under `cargo test`; the same `Deserialize` derive is exercised via JSON instead).
# Dev-only, so it never reaches the wasm32 build.
serde_json = "1"

[lints]
workspace = true
