[package]
name = "wasm-bindings"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
# cdylib for the WASM artifact wasm-pack/wasm-bindgen consume; rlib so the surface stays
# unit-testable natively (the render loop is exercised by native tests).
crate-type = ["cdylib", "rlib"]

[dependencies]
engine.workspace = true
# The implicit capture (analog→host-sample resample) — engine-only deps, so it compiles to wasm32
# and the in-WASM render loop can reuse it.
capture.workspace = true
# JS<->Rust glue. wasm-pack auto-installs a `wasm-bindgen-cli` matching THIS crate version from
# Cargo.lock — they must agree exactly, so let the lockfile pin it (don't hand-install a mismatched
# CLI).
wasm-bindgen = "0.2.125"
# The device catalog + scene IR + build logic. The serde-derived types live there; this
# crate stays thin glue — it only marshals them across the JS boundary.
devices.workspace = true
# `serde-wasm-bindgen` is the JS-value bridge: the catalog serializes to a JS object, and the UI's
# runnable "patch" deserializes from one. The (de)serializable types come from `devices`; this crate
# owns only the `JsValue` conversion. (The durable save file is TS-owned versioned JSON; Rust only
# ever sees the runnable projection, deserialized — it never writes the file.)
serde-wasm-bindgen = "0.6"

[lints]
workspace = true
